# VSTHost

./: .gitignore  README.md  VSTHost.bat  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
engine/: CMakeLists.txt  build.bat
engine/src/: AudioEngine.cpp  AudioEngine.h  IPCBridge.cpp  IPCBridge.h  Main.cpp  PluginChain.cpp  PluginChain.h  PluginScanner.cpp  PluginScanner.h  PresetManager.cpp  PresetManager.h
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LevelMeter.tsx  LoadingScreen.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TooltipLayer.tsx
src/components/modals/: SavePresetModal.tsx  ShortcutsModal.tsx
src/components/rack/: GainKnob.tsx  ParamSlider.tsx  PluginSlotRow.tsx
src/components/views/: SettingsView.tsx  StudioView.tsx
src/data/: mockData.ts
src/engine/: engineBridge.ts  persistence.ts  presets.ts
src/store/: useStore.ts
src/styles/: globals.css
src/types/: index.ts
